bugzilla #3911 (https://bugs.freedesktop.org/show_bug.cgi?id=3911)     attachment #3191 (http://bugs.freedesktop.org/attachment.cgi?id=3191)     Disable bus mastering while updating MC_FB_LOCATION and friends to     prevent the X server from hanging on startup every now and then under     some circumstances. (ATI Technologies Inc.)